# 01p5

./: .dockerignore  .gitignore  Dockerfile  FINAL_REPORT.md  PROJECT_PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
agents/ansible/: conftest.py  pyproject.toml
agents/ansible/src/ansible_agent/: __init__.py  agent.py  cli.py  tools.py
agents/ansible/tests/: test_ansible_smoke.py
agents/dashboard/: conftest.py  pyproject.toml
agents/dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
agents/dashboard/frontend/src/: App.tsx  api.test.ts  api.ts  index.css  test-setup.ts  types.ts
agents/dashboard/frontend/src/components/: ApprovalsPanel.test.tsx  ApprovalsPanel.tsx  AuditPanel.test.tsx  AuditPanel.tsx  Badge.test.tsx  Badge.tsx  BusSidebar.test.tsx  BusSidebar.tsx  Button.test.tsx  Button.tsx  Card.test.tsx  Card.tsx  CodeBlock.test.tsx  CodeBlock.tsx  CostChip.test.tsx  CostChip.tsx  FeedbackButtons.test.tsx  FeedbackButtons.tsx  Layout.test.tsx  Layout.tsx  MemoryChips.test.tsx  MemoryChips.tsx  Modal.test.tsx  Modal.tsx  RollbackPanel.test.tsx  RollbackPanel.tsx  StatusDot.test.tsx  StatusDot.tsx  Table.test.tsx  Table.tsx  TelemetryFooter.test.tsx  TelemetryFooter.tsx
agents/dashboard/frontend/src/hooks/: usePolling.test.ts  usePolling.ts  useSSE.test.ts  useSSE.ts
agents/dashboard/frontend/src/pages/: AnsiblePage.test.tsx  AnsiblePage.tsx  ChatPage.test.tsx  ChatPage.tsx  KubernetesPage.test.tsx  KubernetesPage.tsx  MCPPage.test.tsx  MCPPage.tsx  ProgrammerPage.test.tsx  ProgrammerPage.tsx  TerraformPage.test.tsx  TerraformPage.tsx
agents/dashboard/src/dashboard/: __init__.py  main.py  server.py
agents/dashboard/static/: index.html
agents/dashboard/tests/: test_dashboard_e2e.py  test_dashboard_server.py
agents/olympus_cli/: conftest.py  pyproject.toml
agents/olympus_cli/src/olympus_cli/: __init__.py  main.py  registry.py  tui.py
agents/olympus_cli/tests/: test_orchestrator_wiring.py  test_tui_smoke.py
agents/programmer/: conftest.py  pyproject.toml
agents/programmer/src/programmer/: __init__.py  agent.py  cli.py  tools.py
agents/programmer/tests/: test_programmer_smoke.py
agents/sysadmin/: conftest.py  pyproject.toml
agents/sysadmin/src/sysadmin/: __init__.py  agent.py  cli.py  tools.py
agents/sysadmin/tests/: test_sysadmin_smoke.py
agents/terraform/: conftest.py  pyproject.toml
agents/terraform/src/terraform/: __init__.py  agent.py  cli.py  tools.py
agents/terraform/tests/: test_terraform_smoke.py
docs/: AGENT_SPEC.md  BUS_DECISION.md  DEMO.md  INTELLIGENCE_LAYER.md  LIVE_DEMO.md  MCP.md
infra/: README.md  env.sh.template
infra/ansible/: docker.yml  get_config.yml  master.yml  set_registry.yml  start_host_services.yml  wg.yml  workers.yml
infra/aws-bootstrap/: main.tf
infra/demo-mcp-server/: README.md  server.py
infra/k8s/: README.md
infra/k8s/charts/olympus/: Chart.yaml  values.yaml
infra/k8s/charts/olympus/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
infra/sandbox-bucket/: main.tf
infra/terraform/: .gitignore  main.tf
infra/terraform/aws/: common.tf  dns.tf  master.tf  router.tf  variables.tf  workers.tf
infra/terraform/pve/: common.tf  dns.tf  images.tf  master.tf  variables.tf  workers.tf
libs/agentlib/: conftest.py  pyproject.toml
libs/agentlib/src/: requirements.txt
libs/agentlib/src/agentlib/: __init__.py  approval_queue.py  approval_webhook.py  budget.py  bus.py  bus_redis.py  main.py  mcp.py  memory.py  models.py  orchestrator.py  plan.py  rollback.py  runtime.py  spec.py  streaming.py
libs/agentlib/tests/: test_approval_webhook.py  test_budget_guard.py  test_bus_redis.py  test_mcp.py  test_memory.py  test_orchestrator.py  test_plan.py  test_plan_integration.py  test_rollback.py  test_runtime.py
