[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olympus-ansible"
version = "0.1.0"
description = "Olympus Ansible agent — playbook execution, inventory inspection"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "agentlib",
    "pydantic>=2.0",
]

[project.scripts]
olympus-ansible = "ansible_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
