[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olympus-dashboard"
version = "0.1.0"
description = "Olympus web dashboard — task submission, live agent activity, approval queue, audit viewer"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "agentlib",
    "olympus-cli",
]

[project.scripts]
olympus-dashboard = "dashboard.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
