[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olympus-programmer"
version = "0.1.0"
description = "Olympus Programmer agent — Dockerfile/Helm/script generation, gated file writes"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "agentlib",
    "pydantic>=2.0",
]

[project.scripts]
olympus-programmer = "programmer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
