[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olympus-terraform"
version = "0.1.0"
description = "Olympus Terraform agent — plan/apply/destroy with state awareness, IaC approval diffs"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "agentlib",
    "pydantic>=2.0",
]

[project.scripts]
olympus-terraform = "terraform.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
