[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlib"
version = "0.1.0"
description = "A library for creating structured AI agents using LangChain and LangGraph"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Olympus Project"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "adjustText==1.3.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anthropic==0.72.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "docker==7.1.0",
    "docstring_parser==0.17.0",
    "faiss-cpu==1.12.0",
    "fastuuid==0.14.0",
    "filelock==3.20.0",
    "Flask==3.0.0",
    "Flask-Cors==4.0.0",
    "fonttools==4.60.1",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "google-api-core==2.28.1",
    "google-api-python-client==2.185.0",
    "google-auth==2.42.0",
    "google-auth-httplib2==0.2.0",
    "google-cloud-core==2.4.3",
    "google-cloud-modelarmor==0.3.0",
    "googleapis-common-protos==1.71.0",
    "greenlet==3.2.4",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "html2text==2025.4.15",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.0.1",
    "idna==3.11",
    "importlib_metadata==8.7.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "jiter==0.11.1",
    "joblib==1.5.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.4.9",
    "langchain==1.0.2",
    "langchain-anthropic==1.0.0",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.0.1",
    "langchain-google-community==3.0.0",
    "langchain-ollama==1.0.0",
    "langchain-openai==1.0.1",
    "langchain-text-splitters==1.0.0",
    "langgraph==1.0.2",
    "langgraph-checkpoint==3.0.0",
    "langgraph-prebuilt==1.0.2",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.38",
    "litellm==1.79.0",
    "MarkupSafe==3.0.3",
    "marshmallow==3.26.1",
    "matplotlib==3.10.7",
    "multidict==6.7.0",
    "mypy_extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "numpy==2.3.4",
    "ollama==0.6.0",
    "openai==2.6.1",
    "orjson==3.11.4",
    "ormsgpack==1.11.0",
    "packaging==25.0",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "propcache==0.4.1",
    "proto-plus==1.26.1",
    "protobuf==6.33.0",
    "psutil==7.1.3",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "pydantic_core==2.41.4",
    "Pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "PyYAML==6.0.3",
    "RapidFuzz==3.14.1",
    "referencing==0.37.0",
    "regex==2025.10.23",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.28.0",
    "rsa==4.9.1",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.44",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer-slim==0.20.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "wcwidth==0.2.14",
    "Werkzeug==3.1.3",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]

[project.optional-dependencies]
dev = [
    "asttokens==3.0.0",
    "comm==0.2.3",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "distro==1.9.0",
    "executing==2.2.1",
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "ipython_pygments_lexers==1.1.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.9.1",
    "matplotlib-inline==0.2.1",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "prompt_toolkit==3.0.52",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pyzmq==27.1.0",
    "stack-data==0.6.3",
    "tornado==6.5.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["src/requirements.txt", "**/__pycache__"]

[tool.ruff.lint]
# Conservative initial set — bug-finding rules only. We deliberately skip
# pyupgrade (UP) and other style-modernization rules for now; the codebase
# still targets Python 3.9 and ``from __future__ import annotations``
# already buys us PEP-604 syntax without forcing a migration.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # import ordering
    "B",    # bugbear (likely-bug patterns)
]
ignore = [
    "E501",  # line length — formatter's job, not the linter's
    "B008",  # function-call-in-default — common pydantic Field() pattern
    "B006",  # mutable-default — flagged by Field(default_factory=...) patterns
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017", "B018"]  # tests can use bare-assert / un-attached expressions
# main.py / streaming.py wildcard-import every model identifier from .models —
# explicit re-listing here doesn't catch real bugs because the names are
# constants, not callables. Revisit if .models grows side effects.
"src/agentlib/main.py" = ["F403", "F405"]
"src/agentlib/streaming.py" = ["F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
